--- a/app.json
+++ b/app.json
@@ -9,14 +9,14 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#f8f8f8",
     "navigationBarTitleText": "易达预约挂号平台",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "color": "#7A7E83",
     "selectedColor": "#3cc51f",
-    "backgroundColor": "#ffffff",
+    "backgroundColor": "#f7f7f7",
     "borderStyle": "black",
     "list": [
       {
